<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.PerfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1">


            <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
                <!--android:id="@+id/image_user"-->
                <!--android:layout_gravity="center"-->

                <!--android:layout_width="96dp"-->
                <!--android:layout_height="96dp"-->
                <!--android:src="@drawable/ic_perfil"-->
                <!--/>-->


            <ImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/image_user"
                android:layout_gravity="center"

                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_perfil"
               />

        </TableRow>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:text="@string/string_user_name" />

            <TextView
                android:id="@+id/email_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/id_user"/>

            <TextView
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:text="@string/other_info_user"/>

    </LinearLayout>

</FrameLayout>
