<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_item"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:backgroundTint="@color/cvYellow"
        app:cardCornerRadius="5dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="0.85"
                android:layout_width="wrap_content"
                android:layout_height="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="190dp"
                        android:layout_height="150dp"
                        android:foregroundGravity="center"
                        android:src="@drawable/ic_no_image"
                         />

                    <View
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:background="@color/trans_white"/>

                    <View
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:id="@+id/vPostColor"
                        android:layout_margin="4dp"
                        android:background="@color/colorPrimary"/>

                    <ImageView
                        android:id="@+id/ivImage2"
                        android:layout_width="130dp"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_broken_image" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:gravity="bottom">

                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:textColor="@color/cvWhite"
                            android:textAlignment="center"
                            android:background="@color/hintBlack"
                            android:text="@string/description_image" />
                    </LinearLayout>



                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="0.15"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:id="@+id/tvCap"
                    android:layout_weight="0.25"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textColor="@color/cvWhite"
                    android:textAlignment="center"
                    android:text="@string/cap"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/tvStatus"
                    android:layout_weight="0.25"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAlignment="center"
                    android:text="@string/status_premiere"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/tvData"
                    android:layout_weight="0.25"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAlignment="center"
                    android:text="@string/default_date"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/tvDay"
                    android:layout_weight="0.25"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAlignment="center"
                    android:text="@string/default_data"/>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>