<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:backgroundTint="@color/cvYellow"
        app:cardCornerRadius="5dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="0.03"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:id="@+id/vPostColor"
                    android:layout_width="4dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="3dp"
                    android:background="@drawable/background_text"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="3dp"
                        android:layout_gravity="center"
                        android:background="@color/cvWhite"
                        android:elevation="5dp"
                        app:srcCompat="@drawable/ic_no_image"
                        android:contentDescription="@string/description_image"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/tvidA"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/semiTrans2"
                        android:textColor="#ffff"
                        android:layout_margin="3dp"
                        android:paddingHorizontal="5dp"
                        android:gravity="bottom"
                        android:textSize="10dp"
                        android:elevation="6dp"
                        android:text="1234"/>

                </RelativeLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvTitle"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:scrollbars="vertical"
                        android:lines="2"
                        android:minLines="1"
                        android:maxLines="3"
                        android:shadowColor="#f2f2f2"
                        android:textColor="#000000"
                        android:text="@string/title_name_anime"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_weight="0.4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvStatus"
                            android:gravity="center"
                            android:textStyle="bold|italic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingVertical="3dp"
                            android:background="@drawable/background_text2"
                            android:textColor="#000000"
                            android:text="@string/title_status_anime"
                            tools:targetApi="o" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="0.6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvData"
                            android:gravity="center"
                            android:textSize="13sp"
                            android:textStyle="italic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/title_date_created"/>
                    </LinearLayout>





                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.17"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_weight="0.5"
                    android:id="@+id/tvCap"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:gravity="end|center"
                    android:textSize="20dp"
                    android:singleLine="true"
                    android:text="@string/title_capitule"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    tools:ignore="SpUsage,UnusedAttribute" />

                <TextView
                    android:layout_weight="0.5"
                    android:id="@+id/tvDay"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:gravity="end|center"
                    android:textSize="15dp"
                    android:singleLine="true"
                    android:text="@string/title_day_next"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    tools:ignore="SpUsage,UnusedAttribute" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>